--- a/gremio-frontend/src/app/components/login/login.component.html
+++ b/gremio-frontend/src/app/components/login/login.component.html
@@ -1,67 +1,126 @@
-
-<div class="min-h-screen ">
-    <div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8  ">
-        <div class="sm:mx-auto sm:w-full sm:max-w-sm">
-          <img class="mx-auto h-10 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600" alt="Your Company">
-          <h2 class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900">Login in to your account</h2>
-          <div *ngIf="errorMessage" class="mt-5 text-center text-2xl font-bold leading-9 tracking-tight text-red-600 dark:text-red-500">{{ errorMessage }}</div>
-    
-        </div>
-      
-        <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
-          <form class="space-y-6" [formGroup]="loginForm" (ngSubmit)="onSumbit()">
-            <div>
-              <label for="email" class="block text-sm font-medium leading-6 text-gray-900">Email address</label>
-              <div class="mt-2">
-                <input formControlName="email" placeholder="asda" name="email" type="email" required 
-                [ngClass]="{ 
+<div class="min-h-screen">
+  <div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
+    <div class="sm:mx-auto sm:w-full sm:max-w-sm">
+      <img
+        class="mx-auto h-10 w-auto"
+        src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600"
+        alt="Your Company"
+      />
+      <h2
+        class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900"
+      >
+        Login in to your account
+      </h2>
+      <div
+        *ngIf="errorMessage"
+        class="mt-5 text-center text-2xl font-bold leading-9 tracking-tight text-red-600 dark:text-red-500"
+      >
+        {{ errorMessage }}
+      </div>
+    </div>
+    <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
+      <form class="space-y-6" [formGroup]="loginForm" (ngSubmit)="onSumbit()">
+        <div>
+          <label
+            for="email"
+            class="block text-sm font-medium leading-6 text-gray-900"
+            >Email address</label
+          >
+          <div class="mt-2">
+            <input
+              formControlName="email"
+              placeholder="example@gmail.com"
+              name="email"
+              type="email"
+              required
+              [ngClass]="{ 
                     'border-red-500': (loginForm.get('email')?.touched || submitted) && (loginForm.get('email')?.hasError('required') || loginForm.get('email')?.hasError('email')),
                     'border-0': !loginForm.get('email')?.touched && !submitted,
                     'border-green-500': loginForm.get('email')?.valid,
                   }"
-                class="block w-full rounded-md py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
-    
-                <div *ngIf="(loginForm.get('email')?.touched || submitted) && loginForm.get('email')?.hasError('required')">
-                    <p class="mt-2 text-sm text-red-600 dark:text-red-500">Email is required!</p>  
-                </div>   
-                <div *ngIf="loginForm.get('email')?.touched && loginForm.get('email')?.hasError('email')">
-                    <p class="mt-2 text-sm text-red-600 dark:text-red-500"> Enter a valid email address!</p>  
-                </div>   
-              </div>
+              class="block w-full rounded-md py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+            />
+
+            <div
+              *ngIf="
+                (loginForm.get('email')?.touched || submitted) &&
+                loginForm.get('email')?.hasError('required')
+              "
+            >
+              <p class="mt-2 text-sm text-red-600 dark:text-red-500">
+                Email is required!
+              </p>
             </div>
-    
-            <div>
-              <div class="flex items-center justify-between">
-                <label for="password" class="block text-sm font-medium leading-6 text-gray-900">Password</label>
-                <div class="text-sm">
-                  <a href="#" class="font-semibold text-indigo-600 hover:text-indigo-500">Forgot password?</a>
-                </div>
-              </div>
-              <div class="mt-2">
-                <input formControlName="password" name="password" type="password" required 
-                [ngClass]="{ 
+            <div
+              *ngIf="
+                loginForm.get('email')?.touched &&
+                loginForm.get('email')?.hasError('email')
+              "
+            >
+              <p class="mt-2 text-sm text-red-600 dark:text-red-500">
+                Enter a valid email address!
+              </p>
+            </div>
+          </div>
+        </div>
+        <div>
+          <div class="flex items-center justify-between">
+            <label
+              for="password"
+              class="block text-sm font-medium leading-6 text-gray-900"
+              >Password</label
+            >
+            <div class="text-sm">
+              <a
+                routerLink="/forgot-password"
+                class="font-semibold text-indigo-600 hover:text-indigo-500"
+                >Forgot password?</a
+              >
+            </div>
+          </div>
+          <div class="mt-2">
+            <input
+              formControlName="password"
+              name="password"
+              type="password"
+              required
+              [ngClass]="{ 
                     'border-red-500': (loginForm.get('password')?.touched || submitted) && loginForm.get('password')?.hasError('required'),
                     'border-0': !loginForm.get('password')?.touched && !submitted,
                     'border-green-500': loginForm.get('password')?.valid,
                   }"
-                class="block w-full rounded-md py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
-                <div *ngIf="(loginForm.get('password')?.touched || submitted) && loginForm.get('password')?.hasError('required')">
-                    <p class="mt-2 text-sm text-red-600 dark:text-red-500">Password is required!</p>  
-                </div>     
-              </div>
+              class="block w-full rounded-md py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+            />
+            <div
+              *ngIf="
+                (loginForm.get('password')?.touched || submitted) &&
+                loginForm.get('password')?.hasError('required')
+              "
+            >
+              <p class="mt-2 text-sm text-red-600 dark:text-red-500">
+                Password is required!
+              </p>
             </div>
-    
-            <div>
-              <button [disabled]="isAuthenticated()" type="submit" class="flex w-full justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Login</button>
-            </div>
-          </form>
-    
-          <p class="mt-10 text-center text-sm text-gray-500">
-            Don't have account?
-            <a routerLink="/registration" class="font-semibold leading-6 text-indigo-600 hover:text-indigo-500">Create your account</a>
-          </p>
+          </div>
         </div>
-      </div>
-
-
+        <div>
+          <button
+            [disabled]="isAuthenticated()"
+            type="submit"
+            class="flex w-full justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
+          >
+            Login
+          </button>
+        </div>
+      </form>
+      <p class="mt-10 text-center text-sm text-gray-500">
+        Don't have account?
+        <a
+          routerLink="/registration"
+          class="font-semibold leading-6 text-indigo-600 hover:text-indigo-500"
+          >Create your account</a
+        >
+      </p>
     </div>
+  </div>
+</div>
