user exception handlig, format error messages and add spinner when user forgot the password

--- a/gremio-frontend/src/app/components/forgot-password/forgot-password.component.html
+++ b/gremio-frontend/src/app/components/forgot-password/forgot-password.component.html
@@ -20,12 +20,14 @@
         <p class="mb-10 text-center text-sm">
           Enter your email and we'll send you a link to reset your password.
         </p>
+
         <div
-        *ngIf="errorMessage"
-        class="mt-5 text-center text-2xl font-bold leading-9 tracking-tight text-red-600 dark:text-red-500"
-      >
-        {{ errorMessage }}
-      </div>
+          *ngIf="errorMessage"
+          class="mt-5 mb-5 bg-orange-100 text-orange-700 p-4"
+        >
+          <p>{{ errorMessage }}</p>
+        </div>
+
         <form
           class="w-full"
           [formGroup]="forgotPasswordForm"
@@ -69,9 +71,27 @@
 
           <button
             type="submit"
+            [disabled]="loading"
             class="inline-flex justify-center rounded-lg text-sm font-semibold py-2.5 px-4 bg-slate-900 text-white hover:bg-slate-700 mt-6 w-full"
           >
-            Reset your password
+            <span *ngIf="!loading">Reset your password</span>
+            <span *ngIf="loading" class="flex items-center">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="w-5 h-5 mr-1 animate-spin"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M16.023 9.348h4.992v-.001M2.985 19.644v-4.992m0 0h4.992m-4.993 0l3.181 3.183a8.25 8.25 0 0013.803-3.7M4.031 9.865a8.25 8.25 0 0113.803-3.7l3.181 3.182m0-4.991v4.99"
+                />
+              </svg>
+              Processing ...
+            </span>
           </button>
         </form>
       </div>
@@ -84,8 +104,24 @@
         <a
           class="inline-flex justify-center rounded-lg text-sm font-semibold py-2.5 px-4 text-slate-900 ring-1 ring-slate-900/10 hover:ring-slate-900/20"
           routerLink="/registration"
-          ><span>Get access <span aria-hidden="true">→</span></span></a
-        >
+          ><span class="flex items-center"
+            >Get access
+            <span aria-hidden="true" class="ml-2"
+              ><svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="w-5 h-5"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M17.25 8.25L21 12m0 0l-3.75 3.75M21 12H3"
+                />
+              </svg> </span></span
+        ></a>
       </div>
     </footer>
   </div>
@@ -159,7 +195,10 @@
                 </h3>
                 <div class="mt-2">
                   <p class="text-sm text-gray-500">
-                    We have sent an email to your registered email address containing instructions to reset your password. Kindly follow the steps outlined in the email to proceed with the password reset process.
+                    We have sent an email to your registered email address
+                    containing instructions to reset your password. Kindly
+                    follow the steps outlined in the email to proceed with the
+                    password reset process.
                   </p>
                 </div>
               </div>
@@ -167,7 +206,7 @@
           </div>
           <div class="bg-gray-50 px-4 py-3 sm:flex sm:flex-row-reverse sm:px-6">
             <button
-              (click)="closeDropdown()"
+              (click)="toggleModal()"
               type="button"
               class="inline-flex w-full justify-center rounded-md bg-indigo-600 hover:bg-indigo-500 px-3 py-2 text-sm font-semibold text-white shadow-sm sm:ml-3 sm:w-auto"
             >
