--- a/gremio-frontend/src/app/components/reset-password/reset-password.component.html
+++ b/gremio-frontend/src/app/components/reset-password/reset-password.component.html
@@ -22,9 +22,9 @@
         </p>
         <div
           *ngIf="errorMessage"
-          class="mt-5 text-center text-2xl font-bold leading-9 tracking-tight text-red-600 dark:text-red-500"
+          class="mt-5 mb-5 bg-orange-100 text-orange-700 p-4"
         >
-          {{ errorMessage }}
+          <p>{{ errorMessage }}</p>
         </div>
         <form
           class="w-full"
@@ -68,7 +68,7 @@
           </div>
           <label
             class="mt-10 block text-sm font-semibold leading-6 text-gray-900"
-            >Password again</label
+            >Confirm New Password</label
           >
           <input
             type="password"
