--- a/src/app/components/reset-password/reset-password.component.html
+++ b/src/app/components/reset-password/reset-password.component.html
@@ -31,83 +31,122 @@
           [formGroup]="resetPasswordForm"
           (ngSubmit)="onSumbit()"
         >
-          <label class="block text-sm font-semibold leading-6 text-gray-900"
-            >Password</label
-          ><input
-            type="password"
-            name="password"
-            formControlName="password"
-            class="block w-full rounded-md py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6 border-0"
-            required
-            [ngClass]="{ 
-                'border-red-500': (resetPasswordForm.get('password')?.touched || submitted) && (resetPasswordForm.get('password')?.hasError('required') || resetPasswordForm.get('password')?.hasError('password') || resetPasswordForm.get('password')?.hasError('minlength')),
-                'border-0': !resetPasswordForm.get('password')?.touched && !submitted,
-                'border-green-500': resetPasswordForm.get('password')?.valid,
-              }"
-          />
+          <div class="mt-2">
+            <label
+              class="mt-10 block text-sm font-semibold leading-6 text-gray-900"
+              >New Password</label
+            >
+            <div class="relative w-full min-w-[200px] h-10">
+              <div
+                class="absolute grid place-items-center top-4 right-3 -translate-y-2/4"
+              >
+                <button (click)="showHidePassword($event)">
+                  <app-icon
+                    [iconName]="showPassword ? 'eye-close' : 'eye-open'"
+                    iconClasses="w-6 h-5"
+                  ></app-icon>
+                </button>
+              </div>
+              <input
+                formControlName="password"
+                name="password"
+                [type]="showPassword ? 'text' : 'password'"
+                required
+                [ngClass]="{ 
+                    'border-red-500': (resetPasswordForm.get('password')?.touched || submitted) && resetPasswordForm.get('password')?.hasError('required'),
+                    'border-0': !resetPasswordForm.get('password')?.touched && !submitted,
+                    'border-green-500': resetPasswordForm.get('password')?.valid,
+                  }"
+                class="block w-full rounded-md py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+              />
+            </div>
+            <div
+              *ngIf="
+                (resetPasswordForm.get('password')?.touched || submitted) &&
+                resetPasswordForm.get('password')?.hasError('required')
+              "
+            >
+              <p class="mt-2 text-sm text-red-600 dark:text-red-500">
+                Password is required!
+              </p>
+            </div>
+            <div
+              *ngIf="
+                resetPasswordForm.get('password')?.touched &&
+                resetPasswordForm.get('password')?.hasError('minlength')
+              "
+            >
+              <p class="mt-2 text-sm text-red-600 dark:text-red-500">
+                Password must be at least 5 characters long.
+              </p>
+            </div>
+          </div>
 
-          <div
-            *ngIf="
-              (resetPasswordForm.get('password')?.touched || submitted) &&
-              resetPasswordForm.get('password')?.hasError('required')
-            "
-          >
-            <p class="mt-2 text-sm text-red-600 dark:text-red-500">
-              Password is required!
-            </p>
-          </div>
-          <div
-            *ngIf="
-              resetPasswordForm.get('password')?.touched &&
-              resetPasswordForm.get('password')?.hasError('minlength')
-            "
-          >
-            <p class="mt-2 text-sm text-red-600 dark:text-red-500">
-              Password must be at least 5 characters long.
-            </p>
-          </div>
-          <label
-            class="mt-10 block text-sm font-semibold leading-6 text-gray-900"
-            >Confirm New Password</label
-          >
-          <input
-            type="password"
-            name="passwordAgain"
-            formControlName="passwordAgain"
-            class="block w-full rounded-md py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6 border-0"
-            required
-            [ngClass]="{ 
+          <div class="mt-2">
+            <label
+              class="mt-10 block text-sm font-semibold leading-6 text-gray-900"
+              >Confirm New Password</label
+            >
+
+            <div class="relative w-full min-w-[200px] h-10">
+              <div
+                class="absolute grid place-items-center top-4 right-3 -translate-y-2/4"
+              >
+                <button (click)="showHideConfirmPassword($event)">
+                  <app-icon
+                    [iconName]="showConfirmPassword ? 'eye-close' : 'eye-open'"
+                    iconClasses="w-6 h-5"
+                  ></app-icon>
+                </button>
+              </div>
+              <input
+                formControlName="passwordAgain"
+                name="passwordAgain"
+                [type]="showConfirmPassword ? 'text' : 'password'"
+                required
+                [ngClass]="{ 
                 'border-red-500': (resetPasswordForm.get('passwordAgain')?.touched || submitted) && (resetPasswordForm.get('passwordAgain')?.hasError('required') || resetPasswordForm.get('passwordAgain')?.hasError('password') || resetPasswordForm.get('passwordAgain')?.hasError('minlength')),
                 'border-0': !resetPasswordForm.get('passwordAgain')?.touched && !submitted,
                 'border-green-500': resetPasswordForm.get('passwordAgain')?.valid,
               }"
-          />
-          <div
-          *ngIf="
-            (resetPasswordForm.get('passwordAgain')?.touched || submitted) &&
-            resetPasswordForm.get('passwordAgain')?.hasError('required')
-          "
-        >
-          <p class="mt-2 text-sm text-red-600 dark:text-red-500">
-            Password is required!
-          </p>
-        </div>
-        <div
-          *ngIf="
-            resetPasswordForm.get('passwordAgain')?.touched &&
-            resetPasswordForm.get('passwordAgain')?.hasError('minlength')
-          "
-        >
-          <p class="mt-2 text-sm text-red-600 dark:text-red-500">
-            Password must be at least 5 characters long.
-          </p>
-        </div>
+                class="block w-full rounded-md py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+              />
+            </div>
+            <div
+              *ngIf="
+                (resetPasswordForm.get('passwordAgain')?.touched ||
+                  submitted) &&
+                resetPasswordForm.get('passwordAgain')?.hasError('required')
+              "
+            >
+              <p class="mt-2 text-sm text-red-600 dark:text-red-500">
+                Password is required!
+              </p>
+            </div>
+            <div
+              *ngIf="
+                resetPasswordForm.get('passwordAgain')?.touched &&
+                resetPasswordForm.get('passwordAgain')?.hasError('minlength')
+              "
+            >
+              <p class="mt-2 text-sm text-red-600 dark:text-red-500">
+                Password must be at least 5 characters long.
+              </p>
+            </div>
 
-        <div *ngIf="resetPasswordForm.hasError('passwordMismatch') && (resetPasswordForm.get('password')?.touched || resetPasswordForm.get('passwordAgain')?.touched)">
-          <p class="mt-2 text-sm text-red-600 dark:text-red-500">
-            Passwords do not match.
-          </p>
-        </div>
+            <div
+              *ngIf="
+                resetPasswordForm.hasError('passwordMismatch') &&
+                (resetPasswordForm.get('password')?.touched ||
+                  resetPasswordForm.get('passwordAgain')?.touched)
+              "
+            >
+              <p class="mt-2 text-sm text-red-600 dark:text-red-500">
+                Passwords do not match.
+              </p>
+            </div>
+          </div>
+
           <button
             type="submit"
             class="inline-flex justify-center rounded-lg text-sm font-semibold py-2.5 px-4 bg-slate-900 text-white hover:bg-slate-700 mt-6 w-full"
@@ -163,21 +202,11 @@
               <div
                 class="mx-auto flex h-12 w-12 flex-shrink-0 items-center justify-center rounded-full bg-green-100 sm:mx-0 sm:h-10 sm:w-10"
               >
-                <svg
-                  class="h-6 w-6 text-green-600"
-                  xmlns="http://www.w3.org/2000/svg"
-                  fill="none"
-                  viewBox="0 0 24 24"
-                  stroke-width="1.5"
-                  stroke="currentColor"
-                  aria-hidden="true"
-                >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    d="M4.5 12.75l6 6 9-13.5"
-                  ></path>
-                </svg>
+                <app-icon
+                  iconName="tick"
+                  iconViewBox="0 -0.5 25 25"
+                  iconClasses="w-10 h-10 text-green-600"
+                ></app-icon>
               </div>
               <div class="mt-3 text-center sm:ml-4 sm:mt-0 sm:text-left">
                 <h3
@@ -209,5 +238,5 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> 
 </div>
