--- a/src/app/components/forgot-password/forgot-password.component.html
+++ b/src/app/components/forgot-password/forgot-password.component.html
@@ -76,20 +76,11 @@
           >
             <span *ngIf="!loading">Reset your password</span>
             <span *ngIf="loading" class="flex items-center">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                fill="none"
-                viewBox="0 0 24 24"
-                stroke-width="1.5"
-                stroke="currentColor"
-                class="w-5 h-5 mr-1 animate-spin"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  d="M16.023 9.348h4.992v-.001M2.985 19.644v-4.992m0 0h4.992m-4.993 0l3.181 3.183a8.25 8.25 0 0013.803-3.7M4.031 9.865a8.25 8.25 0 0113.803-3.7l3.181 3.182m0-4.991v4.99"
-                />
-              </svg>
+              <app-icon
+                iconName="spinner"
+                iconClasses="w-5 h-5 mr-1 animate-spin text-white"
+                iconViewBox="0 0 24 24"
+              ></app-icon>
               Processing ...
             </span>
           </button>
@@ -106,21 +97,12 @@
           routerLink="/registration"
           ><span class="flex items-center"
             >Get access
-            <span aria-hidden="true" class="ml-2"
-              ><svg
-                xmlns="http://www.w3.org/2000/svg"
-                fill="none"
-                viewBox="0 0 24 24"
-                stroke-width="1.5"
-                stroke="currentColor"
-                class="w-5 h-5"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  d="M17.25 8.25L21 12m0 0l-3.75 3.75M21 12H3"
-                />
-              </svg> </span></span
+            <span aria-hidden="true" class="ml-2">
+              <app-icon
+                iconName="right-arrow"
+                iconClasses="w-6 h-5"
+                iconViewBox="0 0 24 24"
+              ></app-icon> </span></span
         ></a>
       </div>
     </footer>
@@ -143,7 +125,7 @@
       From: "opacity-100"
       To: "opacity-0"
   -->
-  <div class="modal hidden">
+  <div class="modal">
     <div
       class="fixed inset-0 bg-gray-500 bg-opacity-75 transition-opacity"
     ></div>
@@ -170,21 +152,11 @@
               <div
                 class="mx-auto flex h-12 w-12 flex-shrink-0 items-center justify-center rounded-full bg-green-100 sm:mx-0 sm:h-10 sm:w-10"
               >
-                <svg
-                  class="h-6 w-6 text-green-600"
-                  xmlns="http://www.w3.org/2000/svg"
-                  fill="none"
-                  viewBox="0 0 24 24"
-                  stroke-width="1.5"
-                  stroke="currentColor"
-                  aria-hidden="true"
-                >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    d="M4.5 12.75l6 6 9-13.5"
-                  ></path>
-                </svg>
+                <app-icon
+                  iconName="tick"
+                  iconViewBox="0 -0.5 25 25"
+                  iconClasses="w-10 h-10 text-green-600"
+                ></app-icon>
               </div>
               <div class="mt-3 text-center sm:ml-4 sm:mt-0 sm:text-left">
                 <h3
