--- a/src/app/components/registration/registration.component.html
+++ b/src/app/components/registration/registration.component.html
@@ -1,1 +1,180 @@
-<p>registration works!</p>
+<div class="min-h-screen">
+  <div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
+    <div class="sm:mx-auto sm:w-full sm:max-w-sm">
+      <img
+        class="mx-auto h-10 w-auto"
+        src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600"
+        alt="Your Company"
+      />
+      <h2
+        class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900"
+      >
+        Create your account
+      </h2>
+      <div
+        *ngIf="errorMessage"
+        class="mt-5 text-center text-2xl font-bold leading-9 tracking-tight text-red-600 dark:text-red-500"
+      >
+        {{ errorMessage }}
+      </div>
+    </div>
+    <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
+      <form
+        class="space-y-6"
+        [formGroup]="registrationForm"
+        (ngSubmit)="onSumbit()"
+      >
+        <div>
+          <label
+            for="firstName"
+            class="block text-sm font-medium leading-6 text-gray-900"
+            >First Name</label
+          >
+          <div class="mt-2">
+            <input
+              formControlName="firstName"
+              placeholder="Joe"
+              name="firstName"
+              type="text"
+              class="border-0 block w-full rounded-md py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+            />
+          </div>
+        </div>
+
+        <div>
+          <label
+            for="lastName"
+            class="block text-sm font-medium leading-6 text-gray-900"
+            >Last Name</label
+          >
+          <div class="mt-2">
+            <input
+              formControlName="lastName"
+              placeholder="Doe"
+              name="lastName"
+              type="text"
+              class="border-0 block w-full rounded-md py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+            />
+          </div>
+        </div>
+
+        <div>
+          <label
+            for="email"
+            class="block text-sm font-medium leading-6 text-gray-900"
+            >Email address</label
+          >
+          <div class="mt-2">
+            <input
+              formControlName="email"
+              placeholder="example@gmail.com"
+              name="email"
+              type="email"
+              required
+              [ngClass]="{ 
+                      'border-red-500': (registrationForm.get('email')?.touched || submitted) && (registrationForm.get('email')?.hasError('required') || registrationForm.get('email')?.hasError('email')),
+                      'border-0': !registrationForm.get('email')?.touched && !submitted,
+                      'border-green-500': registrationForm.get('email')?.valid,
+                    }"
+              class="block w-full rounded-md py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+            />
+
+            <div
+              *ngIf="
+                (registrationForm.get('email')?.touched || submitted) &&
+                registrationForm.get('email')?.hasError('required')
+              "
+            >
+              <p class="mt-2 text-sm text-red-600 dark:text-red-500">
+                Email is required!
+              </p>
+            </div>
+            <div
+              *ngIf="
+                registrationForm.get('email')?.touched &&
+                registrationForm.get('email')?.hasError('email')
+              "
+            >
+              <p class="mt-2 text-sm text-red-600 dark:text-red-500">
+                Enter a valid email address!
+              </p>
+            </div>
+          </div>
+        </div>
+        <div>
+          <div class="flex items-center justify-between">
+            <label
+              for="password"
+              class="block text-sm font-medium leading-6 text-gray-900"
+              >Password</label
+            >
+          </div>
+          <div class="mt-2">
+            <div class="relative w-full min-w-[200px] h-10">
+              <div
+                class="absolute grid place-items-center top-4 right-3 -translate-y-2/4"
+              >
+                <button (click)="showHidePassword($event)">
+                  <app-icon
+                    [iconName]="showPassword ? 'eye-close' : 'eye-open'"
+                    iconClasses="w-6 h-5"
+                  ></app-icon>
+                </button>
+              </div>
+              <input
+                formControlName="password"
+                name="password"
+                [type]="showPassword ? 'text' : 'password'"
+                required
+                [ngClass]="{ 
+                        'border-red-500': (registrationForm.get('password')?.touched || submitted) && registrationForm.get('password')?.hasError('required'),
+                        'border-0': !registrationForm.get('password')?.touched && !submitted,
+                        'border-green-500': registrationForm.get('password')?.valid,
+                      }"
+                class="block w-full rounded-md py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+              />
+            </div>
+            <div
+              *ngIf="
+                (registrationForm.get('password')?.touched || submitted) &&
+                registrationForm.get('password')?.hasError('required')
+              "
+            >
+              <p class="mt-2 text-sm text-red-600 dark:text-red-500">
+                Password is required!
+              </p>
+            </div>
+            <div
+            *ngIf="
+              registrationForm.get('password')?.touched &&
+              registrationForm.get('password')?.hasError('minlength')
+            "
+          >
+            <p class="mt-2 text-sm text-red-600 dark:text-red-500">
+              Password must be at least 5 characters long.
+            </p>
+          </div>
+
+          </div>
+        </div>
+        <div>
+          <button
+            [disabled]="isAuthenticated()"
+            type="submit"
+            class="flex w-full justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
+          >
+            Registration
+          </button>
+        </div>
+      </form>
+      <p class="mt-10 text-center text-sm text-gray-500">
+        Already have an account?
+        <a
+          routerLink="/login"
+          class="font-semibold leading-6 text-indigo-600 hover:text-indigo-500"
+          >Login to your account</a
+        >
+      </p>
+    </div>
+  </div>
+</div>
