--- a/src/app/components/forgot-password/forgot-password.component.html
+++ b/src/app/components/forgot-password/forgot-password.component.html
@@ -125,7 +125,7 @@
       From: "opacity-100"
       To: "opacity-0"
   -->
-  <div class="modal">
+  <div class="modal hidden">
     <div
       class="fixed inset-0 bg-gray-500 bg-opacity-75 transition-opacity"
     ></div>
